--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ admin.conf filter=crypt diff=crypt merge=crypt
 *.key filter=crypt diff=crypt merge=crypt
 *.crt filter=crypt diff=crypt merge=crypt
 init-config-cert-key filter=crypt diff=crypt merge=crypt
+kubeconfig filter=crypt diff=crypt merge=crypt
