--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -16,7 +16,7 @@
           - nfs_allowed_access_ip is defined
         fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
 
-# - import_playbook: setup_nodes.yaml
+- import_playbook: setup_nodes.yaml
 # - import_playbook: initialize_cluster.yaml
 # - import_playbook: setup_controlplanes.yaml
 # - import_playbook: setup_applications.yaml
