--- a/ansible/setup_utilities.yaml
+++ b/ansible/setup_utilities.yaml
@@ -1,7 +1,12 @@
 ---
 # file: setup_utilities.yaml
 
-- hosts: localhost
+- hosts: ansible_control_node
+  become: true
+  vars: 
+    kubeconfig_temp_path: "/tmp/kubeconfig"
+  vars_files:
+    - tf_ansible_vars_file.yaml
   tasks:
     - name: Add metrics-server chart repo
       kubernetes.core.helm_repository:
@@ -11,7 +16,7 @@
     - name: Deploy metrics-server
       kubernetes.core.helm:
         name: metrics-server
-        kubeconfig: ./../kubeconfig
+        kubeconfig: "{{ kubeconfig_temp_path }}"
         chart_ref: metrics-server/metrics-server
         release_namespace: kube-system
         create_namespace: true
@@ -19,7 +24,27 @@
         set_values:
           - value: args="{--kubelet-insecure-tls}" # you can also edit manually by 'k edit deploy metrics-server -n kube-system'
 
-# - import_playbook: setup_nodes.yaml
-# - import_playbook: initialize_cluster.yaml
-# - import_playbook: setup_controlplanes.yaml
-# - import_playbook: setup_applications.yaml
+    - name: Check mandatory variables imported from Terraform
+      assert:
+        that:
+          - tf_nfs_server_ip is defined
+        fail_msg: "tf_nfs_server_ip is not defined in './ansible/tf_ansible_vars_file.yaml'"
+
+    - name: Add nfs-subdir-external-provisioner chart repo
+      kubernetes.core.helm_repository:
+        name: nfs-subdir-external-provisioner
+        repo_url: "https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner"
+
+    - name: Deploy nfs provisioner
+      kubernetes.core.helm:
+        name: nfs-subdir-external-provisioner
+        kubeconfig: "{{ kubeconfig_temp_path }}"
+        chart_ref: nfs-subdir-external-provisioner/nfs-subdir-external-provisioner
+        release_namespace: nfs-provisioner
+        create_namespace: true
+        state: present # present | absent
+        set_values:
+          - value: nfs.server={{ tf_nfs_server_ip }}
+            value_type: string
+          - value: nfs.path=/data
+            value_type: string
