--- a/ansible/roles/bootstrap/tasks/setup_sealed_secrets.yaml
+++ b/ansible/roles/bootstrap/tasks/setup_sealed_secrets.yaml
@@ -8,6 +8,7 @@
 
 - name: Deploy sealed-secrets
   kubernetes.core.helm:
+    kubeconfig: "{{ kubeconfig_temp_path }}"
     name: sealed-secrets
     chart_ref: sealed-secrets/sealed-secrets
     release_namespace: kube-system
