--- a/ansible/setup_essential_apps.yaml
+++ b/ansible/setup_essential_apps.yaml
@@ -1,7 +1,3 @@
----
-# file: setup_applications.yaml
-
-# Install HA Postgres Cluster
 - hosts: ansible_control_node
   become: true
   vars: 
@@ -9,4 +5,4 @@
   vars_files:
     - tf_ansible_vars_file.yaml
   roles:
-    - postgres
+    - bootstrap
