--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -17,8 +17,5 @@
         fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
 
 - import_playbook: setup_nodes.yaml
-# - import_playbook: initialize_cluster.yaml
-# - import_playbook: setup_controlplanes.yaml
-# - import_playbook: setup_applications.yaml
-
-- import_playbook: setup_utilities.yaml
+- import_playbook: setup_essential_apps.yaml
+- import_playbook: setup_applications.yaml
