--- a/ansible/roles/bootstrap/tasks/setup_metrics_server.yaml
+++ b/ansible/roles/bootstrap/tasks/setup_metrics_server.yaml
@@ -8,6 +8,7 @@
 
 - name: Deploy metrics-server
   kubernetes.core.helm:
+    kubeconfig: "{{ kubeconfig_temp_path }}"
     name: metrics-server
     chart_ref: metrics-server/metrics-server
     release_namespace: kube-system
