--- a/ansible/roles/bootstrap/tasks/setup_prometheus.yaml
+++ b/ansible/roles/bootstrap/tasks/setup_prometheus.yaml
@@ -8,6 +8,7 @@
 
 - name: Deploy prometheus-community
   kubernetes.core.helm:
+    kubeconfig: "{{ kubeconfig_temp_path }}"
     name: prometheus
     chart_ref: prometheus-community/kube-prometheus-stack
     release_namespace: prometheus
