--- a/ansible/setup_nodes.yaml
+++ b/ansible/setup_nodes.yaml
@@ -4,6 +4,7 @@
   become: true
   vars: 
     kubeconfig_temp_path: "/tmp/kubeconfig"
+    venv_path: /opt/k8s_venv
   vars_files:
     - tf_ansible_vars_file.yaml
   tasks:
@@ -33,6 +34,37 @@
         mode: '0600'
         owner: root
         group: root
+
+    - name: Install python3-pip # plugin kubernetes.core.k8s requirement
+      apt:
+        name: 
+         - python3
+         - python3-venv
+         - python3-pip
+        state: present
+        update_cache: yes  # Optional: Updates package cache before installing
+
+    - name: Ensure pip is installed (alternative)
+      raw: test -e /usr/bin/pip3 || (apt update && apt install -y python3-pip)
+
+    - name: Create a virtual environment
+      command: python3 -m venv {{ venv_path }}
+      args:
+        creates: "{{ venv_path }}"
+
+    - name: install pre-requisites
+      pip:
+        virtualenv: "{{ venv_path }}"
+        name:
+          - openshift
+          - pyyaml
+          - kubernetes 
+
+    - name: Set environment for future tasks (optional)
+      set_fact:
+        k8s_env:
+          PATH: "{{ venv_path }}/bin:{{ ansible_env.PATH }}"
+          PYTHONPATH: "{{ venv_path }}/lib/python3.*/site-packages"
 
 
 - hosts: nfs
