--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -17,5 +17,6 @@
         fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
 
 - import_playbook: setup_nodes.yaml
+  tags: setup_nodes
 - import_playbook: setup_essential_apps.yaml
 - import_playbook: setup_applications.yaml
