--- a/_out/controlplane_cni_none.yaml
+++ b/_out/controlplane_cni_none.yaml
@@ -302,8 +302,8 @@ machine:
         #     allowedKubernetesNamespaces:
         #         - kube-system
     # Configures the node labels for the machine.
-    nodeLabels:
-        node.kubernetes.io/exclude-from-external-load-balancers: ""
+    # nodeLabels:
+    #     node.kubernetes.io/exclude-from-external-load-balancers: ""
     
     # # Provides machine specific control plane configuration options.
 
