--- a/ansible/roles/bootstrap/tasks/setup_metallb.yaml
+++ b/ansible/roles/bootstrap/tasks/setup_metallb.yaml
@@ -29,13 +29,31 @@
     name: metallb
     repo_url: "https://metallb.github.io/metallb"
 
+- name: Create metallb-system namespace
+  vars:
+    ansible_python_interpreter: /opt/k8s_venv/bin/python
+  kubernetes.core.k8s:
+    kubeconfig: "{{ kubeconfig_temp_path }}"
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Namespace
+      metadata:
+        name: metallb-system
+        labels: # required in Talos Linux for metallb to work
+          kubernetes.io/metadata.name: metallb-system
+          pod-security.kubernetes.io/audit: privileged
+          pod-security.kubernetes.io/enforce: privileged
+          pod-security.kubernetes.io/enforce-version: latest
+          pod-security.kubernetes.io/warn: privileged
+
 - name: Deploy metallb chart
   kubernetes.core.helm:
     kubeconfig: "{{ kubeconfig_temp_path }}"
     name: metallb
     chart_ref: metallb/metallb
     release_namespace: metallb-system
-    create_namespace: true
+    create_namespace: false
     state: present # present | absent
     values:
       speaker:
