--- a/ansible/tf_ansible_vars_file.yaml
+++ b/ansible/tf_ansible_vars_file.yaml
@@ -5,9 +5,13 @@ tf_controlplane_ip:
   - 192.168.254.101
   - 192.168.254.102
   - 192.168.254.103
+
 tf_worker_ip:
   - 192.168.254.104
   - 192.168.254.105
-tf_nfs_server_ip: 192.168.254.107
+
+tf_nfs_server_ip:
+  - 192.168.254.107
+
 tf_ansible_control_node_ip: 192.168.254.108
 nfs_allowed_access_ip: 192.168.254.0/24
