--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -19,4 +19,6 @@
 - import_playbook: setup_nodes.yaml
   tags: setup_nodes
 - import_playbook: setup_essential_apps.yaml
+  tags: essentials
 - import_playbook: setup_applications.yaml
+  tags: apps
