--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -11,14 +11,12 @@
         that:
           - tf_controlplane_ip is defined
           - tf_worker_ip is defined
-          - tf_nfs_server_ip is defined
           - tf_ansible_control_node_ip is defined
-          - nfs_allowed_access_ip is defined
         fail_msg: "tf_* variable usually defined in './ansible/tf_ansible_vars_file.yaml' is missing"
 
 - import_playbook: setup_nodes.yaml
   tags: setup_nodes
-- import_playbook: setup_essential_apps.yaml
-  tags: essentials
-- import_playbook: setup_applications.yaml
-  tags: apps
+# - import_playbook: setup_essential_apps.yaml
+#   tags: essentials
+# - import_playbook: setup_applications.yaml
+#   tags: apps
