--- a/ansible/tf_ansible_vars_file.yaml
+++ b/ansible/tf_ansible_vars_file.yaml
@@ -10,13 +10,8 @@ tf_worker_ip:
   - 192.168.254.104
   - 192.168.254.105
 
-tf_nfs_server_ip:
+tf_load_balancer_ip:
+  - 192.168.254.106
   - 192.168.254.107
 
-tf_ceph_monitor_ip:
-  - 192.168.254.109
-  - 192.168.254.110
-  - 192.168.254.111
-
 tf_ansible_control_node_ip: 192.168.254.108
-nfs_allowed_access_ip: 192.168.254.0/24
