--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ admin.conf filter=crypt diff=crypt merge=crypt
 *.crt filter=crypt diff=crypt merge=crypt
 init-config-cert-key filter=crypt diff=crypt merge=crypt
 kubeconfig filter=crypt diff=crypt merge=crypt
+csi_* filter=crypt diff=crypt merge=crypt
