--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ admin.conf filter=crypt diff=crypt merge=crypt
 init-config-cert-key filter=crypt diff=crypt merge=crypt
 kubeconfig filter=crypt diff=crypt merge=crypt
 csi_* filter=crypt diff=crypt merge=crypt
+ansible/roles/bootstrap/vars/main.yaml filter=crypt diff=crypt merge=crypt
