Add istio in bootstrap

--- a/ansible/roles/bootstrap/tasks/main.yaml
+++ b/ansible/roles/bootstrap/tasks/main.yaml
@@ -64,6 +64,12 @@
 #   tags:
 #     - kube-vip
 
+- name: Setup Istio
+  import_tasks: setup_istio.yaml
+  become: true
+  tags:
+    - istio
+
 - name: Setup Gateway
   import_tasks: setup_gateway.yaml
   become: true
