--- a/ansible/roles/kubernetes_tooling/defaults/main.yaml
+++ b/ansible/roles/kubernetes_tooling/defaults/main.yaml
@@ -9,4 +9,6 @@ k8s_tools_become: true
 kubectl_version: v1.29.1
 helm_version: v3.14.2
 kustomize_version: v5.3.0
-istio_version: 1.21.0
+istio_version: 1.28.3
+
+venv_path: /opt/k8s_venv
