--- a/ansible/roles/kubernetes_tooling/tasks/helm.yaml
+++ b/ansible/roles/kubernetes_tooling/tasks/helm.yaml
@@ -10,8 +10,9 @@
     url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
     dest: /tmp/get-helm-3
     mode: '0755'
-  when: helm_check.rc != 0
-
+  when: >
+    helm_check.rc != 0 or
+    (helm_check.stdout is not search(helm_version))
 
 - name: Install Helm
   command: /tmp/get-helm-3
@@ -19,4 +20,6 @@
     DESIRED_VERSION: "{{ helm_version }}"
     HELM_INSTALL_DIR: "{{ k8s_tools_install_dir }}"
   become: "{{ k8s_tools_become }}"
-  when: helm_check.rc != 0
+  when: >
+    helm_check.rc != 0 or
+    (helm_check.stdout is not search(helm_version))
